## Process this file with automake to produce Makefile.in

TESTS = check_fillunpackstruct
check_PROGRAMS = check_fillunpackstruct
check_fillunpackstruct_SOURCES = check_fillunpackstruct.c $(top_builddir)/src/xsdc.h
check_fillunpackstruct_CFLAGS = @CHECK_CFLAGS@
#check_fillunpackstruct_LDADD = $(top_builddir)/src/libmoney.la @CHECK_LIBS@
